<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PokerApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="findgame">Find a Game</string>
    <string name="myAccount">My Account</string>
    <string name="settings">Settings</string>
    <string name="title_activity_find_game">FindGameActivity</string>
    <string name="title_activity_my_account">MyAccountActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="realMoney">Real Money:</string>
    <string name="moneyAmount">$40</string>
    <string name="username">Username:</string>
    <string name="nameUser">EricdeRegter</string>
    <string name="playingMoney">Playing money:</string>
    <string name="playingMoneyAmount">1.000</string>
    <string name="deposit">Deposit</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="back">Back</string>
    <string name="email">Email:</string>
    <string name="emailvalue">ericderegter@gmail.com</string>
    <string name="tournament">Tournament</string>
    <string name="sitAndGo">Sit and Go</string>
    <string name="ringGame">Ring Game</string>
    <string name="mainmenu">Main Menu</string>
    <string name="title_activity_select_game">SelectGameActivity</string>
    <string name="title_activity_game_detail">GameDetailActivity</string>
    <string name="startTime">Starts At:</string>
    <string name="buyin">Buy-in:</string>
    <string name="totalPrize">Total prize:</string>
    <string name="moreInfo">More Info</string>
    <string name="register">Register</string>
    <string name="participants">Participants:</string>
    <string name="description">Description</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="pokertable">PokerTable</string>
    <string name="fold">Fold</string>
    <string name="check">Check</string>
    <string name="bet">Bet</string>
    <string name="raise">Raise</string>
    <string name="call">Call</string>
    <string name="twoAndAhalfTime">2.5x</string>
    <string name="threeTimes">3x</string>
    <string name="fourTimes">4x</string>
    <string name="history">Show History</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="myHistory">My History</string>
    <string name="title_activity_history_detail">HistoryDetailActivity</string>
	<string name="gameName">Name: </string>
	<string name="place">Place:</string>
	<string name="prize">Prize:</string>
	<string name="startedAt">Started At:</string>
	<string name="fourColorDeck">Use Four Colored Deck:</string>
	<string name="maxBuyin">Maximun Buy-in:</string>
	<string name="sound">Enable Sound:</string>
	<string name="save">Save</string>
	<string name="language">Language</string>
</resources>
