<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/tfMyAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/myAccount"
        android:textColor="@color/white"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tfMyAccount"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="10dp" >

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="0.3" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:paddingRight="5dp"
                    android:text="@string/username"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingLeft="5dp"
                    android:text="@string/nameUser"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="0.3" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="10dp" >

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="0.3" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:paddingRight="5dp"
                    android:text="@string/realMoney"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingLeft="5dp"
                    android:text="@string/moneyAmount"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="0.3" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="10dp" >

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="0.3" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:paddingRight="5dp"
                    android:text="@string/playingMoney"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingLeft="5dp"
                    android:text="@string/playingMoneyAmount"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="0.3" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="10dp" >

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="0.3" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:paddingRight="5dp"
                    android:text="@string/email"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
                
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingLeft="5dp"
                    android:text="@string/emailvalue"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="0.3" />
            </TableRow>
        </TableLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginTop="40dp"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginBottom="10dp" >
                
                
                <Button
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_green_selector"
                    android:text="@string/deposit"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_green_selector"
                    android:text="@string/withdrawal"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
                
                <Button
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_green_selector"
                    android:onClick="btnHistory_Click"
                    android:text="@string/history"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
                
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>