<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/tfMyHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/myHistory"
        android:textColor="@color/white"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tfMyHistory"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="10dp" >

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="0.3" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:paddingRight="5dp"
                    android:text="@string/gameName"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvGameName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingLeft="5dp"
                    android:text="@string/nameUser"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="0.3" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="10dp" >

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="0.3" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:paddingRight="5dp"
                    android:text="@string/place"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvPlace"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingLeft="5dp"
                    android:text="@string/moneyAmount"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="0.3" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="10dp" >

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="0.3" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:paddingRight="5dp"
                    android:text="@string/prize"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvPrize"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingLeft="5dp"
                    android:text="@string/playingMoneyAmount"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="0.3" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="10dp" >

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="0.3" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:paddingRight="5dp"
                    android:text="@string/startedAt"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
                
                <TextView
                    android:id="@+id/tvStartTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingLeft="5dp"
                    android:text="@string/emailvalue"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="0.3" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</RelativeLayout>