<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/tfMyAccount"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/mainmenu"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnFindGame"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_green_selector"
            android:onClick="findGame_Click"
            android:text="@string/findgame"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnMyAccount"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_green_selector"
                android:onClick="myAccount_Click"
                android:text="@string/myAccount"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnSettings"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_green_selector"
                android:onClick="settings_Click"
                android:text="@string/settings"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>