<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/tfFindGame"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/findgame"
        android:textColor="@color/white"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnTournament"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_green_selector"
            android:text="@string/tournament"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:onClick="btnTournament_Click" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnSitGo"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_green_selector"
                android:text="@string/sitAndGo"
                android:textColor="@color/white"
                android:textSize="30sp" 
                android:onClick="btnSitGo_Click"/>

            <Button
                android:id="@+id/btnRingGame"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_green_selector"
                android:text="@string/ringGame"
                android:textColor="@color/white"
                android:textSize="30sp" 
                android:onClick="btnRingGame_Click"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>