<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/tvSelectedGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/myAccount"
        android:textColor="@color/white"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSelectedGame"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="10dp" >

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="0.3" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:paddingRight="5dp"
                    android:text="@string/startTime"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvStartTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingLeft="5dp"
                    android:text="@string/nameUser"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="0.3" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="10dp" >

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="0.3" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:paddingRight="5dp"
                    android:text="@string/buyin"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvBuyin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingLeft="5dp"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="0.3" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="10dp" >

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="0.3" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:paddingRight="5dp"
                    android:text="@string/totalPrize"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvTotalPrize"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingLeft="5dp"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="0.3" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="10dp" >

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="0.3" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:paddingRight="5dp"
                    android:text="@string/participants"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvParticipants"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingLeft="5dp"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="0.3" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="10dp" >

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="0.3" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:paddingRight="5dp"
                    android:text="@string/description"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <ScrollView
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:paddingLeft="5dp" >

                    <TextView
                        android:id="@+id/tvDescription"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="20sp" 
                        android:gravity="right"/>
                </ScrollView>

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="0.3" />
            </TableRow>
        </TableLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <Button
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_green_selector"
                    android:text="@string/register"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:onClick="btnRegister_Click" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_green_selector"
                    android:text="@string/moreInfo"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:onClick="btnMoreInfo_Click" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>